<resources>
    <string name="brio_unidad">Unidad</string>
    <string name="brio_continuar">Continuar</string>
    <string name="brio_aceptar">Aceptar</string>
    <string name="brio_cancelar">Cancelar</string>
    <string name="brio_error">Error</string>
    <string name="brio_guardar">Guardar</string>
    <string name="brio_regresar">Regresar</string>
    <string name="brio_seleccion">Seleccione la opción adecuada</string>
    <string name="brio_loading_msg">Cargando, espere un momento por favor&#8230;</string>
    <string name="brio_nointernet">No hay conexión a internet.\nVuelve a intentarlo cuando estés conectado a internet.</string>
    <string name="app_name">Brío</string>
    <string name="activity_info_loggedin">Comercio: ?0  |  Id Comercio: ?1  |  Usuario: ?2</string>
    <string name="activity_info_notlogged">Comercio: ?0  |  Id Comercio: ?1</string>
    <string name="activity_info_notregistered">No registrado</string>
    <string name="activity_tab_1">Ventas</string>
    <string name="activity_tab_2">Servicios</string>
    <string name="activity_tab_3">Reportes</string>
    <string name="activity_tab_4">Administración</string>
    <string name="activity_tab_5">Mi Brío</string>
    <string name="sync_error">No fue posible realizar la sincronización.\nVuelve a intentarlo más tarde.</string>
    <string name="menu_subtitle">Seleccione la opción deseada</string>
    <string name="menu_reportes_estadocuenta">Estado de cuenta</string>
    <string name="menu_reportes_detallesestadocuenta">Detalles estado de cuenta</string>
    <string name="menu_administracion_cajaentrada">Entrada de dinero</string>
    <string name="menu_administracion_cajasalida">Salida de dinero</string>
    <string name="menu_administracion_balance">Balance de caja</string>
    <string name="menu_administracion_cajacierre">Cierre de caja</string>
    <string name="menu_administracion_admoninventarios">Administración de inventarios</string>
    <string name="menu_administracion_admonusuarios">Administración de usuarios</string>
    <string name="menu_administracion_nuevousuario">Nuevo usuario</string>
    <string name="menu_administracion_cierresesion">Cierre de sesión</string>
    <string name="menu_administracion_sincronizacion">Sincronización</string>
    <string name="menu_administracion_actualizacion">Sincronizar Brío</string>
    <string name="menu_administracion_enviaticketspendientes">Enviar tickets pendientes</string>
    <string name="menu_administracion_cierresesion_mensaje">¿Desea cerrar su sesión?</string>
    <string name="menu_administracion_inventarios_altaarticulo">Alta de productos</string>
    <string name="menu_administracion_inventarios_inventario">Inventario</string>
    <string name="menu_mibrio_briouniversidad">Universidad Brío</string>
    <string name="menu_mibrio_brionoticias">Brío Noticias</string>
    <string name="menu_mibrio_briomail">Mi Mail Brío</string>
    <string name="menu_mibrio_briocontrato">Mi Contrato Brío</string>
    <string name="menu_mibrio_briogarantia">Garantía Extendida</string>
    <string name="menu_mibrio_brioservicios">Servicios para el Asociado</string>
    <string name="menu_mibrio_briohorarios">Horarios Brío</string>
    <string name="menu_mibrio_briopoliticas">Políticas de Servicio</string>
    <string name="menu_mibrio_briotiempos">Compromiso de Atención</string>
    <string name="setup_internet_error">No hay acceso a internet.</string>
    <string name="setup_activation_error">Se requiere acceso a internet para la activación de Brio.\nNo podrás continuar hasta que actives tu comercio en Brio.\n¿Deseas reintentar la activación?</string>
    <string name="setup_update_title">Actualizar Brío</string>
    <string name="setup_update_msj">Ocurrió un error al buscar actualizaciones Brío.\nVuelve a intentarlo más tarde.</string>
    <string name="setup_update_init">Buscando actualizaciones&#8230;</string>
    <string name="setup_update_ok_uptodate">Tienes la versión más reciente de Brío.</string>
    <string name="setup_update_ok_install">Por favor acepta la instalación de la nueva versión de Brío.</string>
    <string name="payment_title">Resumen</string>
    <string name="payment_total">Total a cobrar:</string>
    <string name="payment_restante">Restante:</string>
    <string name="payment_title_efectivo">EFECTIVO</string>
    <string name="payment_title_tarjeta">TARJETA</string>
    <string name="payment_title_fiado">FIADO</string>
    <string name="payment_efectivo">Ingrese efectivo</string>
    <string name="payment_tarjeta">Ingrese monto tarjeta</string>
    <string name="payment_billpocket_notfound">Para realizar cobros con tarjeta requiere la aplicación de Billpocket.\n¿Desea instalarla ahora?</string>
    <string name="payment_ticket_default_descripcion">Mostrador</string>
    <string name="payment_cambio">Cambio:</string>
    <string name="payment_tipo_ticket_pos">Venta</string>
    <string name="payment_tipo_ticket_servicio">Pago de servicios</string>
    <string name="payment_tipo_ticket_tae">Recarga telefónica</string>
    <string name="payment_tipo_ticket_internet">Pago de internet</string>
    <string name="payment_tipo_ticket_banco_entrada">Entrada bancaria</string>
    <string name="payment_tipo_ticket_banco_salida">Retiro bancario</string>
    <string name="payment_tipo_ticket_seguro">COMPRA DE SEGURO</string>
    <string name="payment_tipo_ticket_western_pago">PAGO DE REMESA</string>
    <string name="payment_tipo_ticket_western_aviso">
ENTREGA TRANSFERENCIA DE DINERO BAJO LA MARCA WESTERN UNION. Los Envíos de Dinero se
entregan en efectivo a los beneficiarios, sujeto a la
disponibilidad y las condiciones aplicables, sin cobrar
comisión alguna a éstos. CAMBIO DE MONEDA. Los
Envíos de Dinero se entregan en Pesos, Moneda Nacional
a los beneficiarios. El monto del Envío de Dinero que se
entrega al beneficiario en México es acordado por el
remitente y Western Union en el país de origen. El tipo de
cambio que se utiliza para los Envíos de Dinero a México
es fijado por Western Union y aceptado por el remitente.
Si hubiere una diferencia a favor de Western Union entre
la cantidad del Envío de Dinero entregada por el remitente
al Agente autorizado de Western Union en el país de
origen y la cantidad entregada al beneficiario en México
derivada del tipo de cambio fijado por Western Union,
dicha diferencia quedará en favor de Western Union o en
algunos casos, de sus Agentes autorizados.
REEMBOLSO. Los reembolsos estarán sujetos a las
condiciones aplicables y únicamente se realizan al
Remitente en el Extranjero. POR NINGUN CONCEPTO,
WESTERN UNION O CUALQUIERA DE SUS AGENTES
AUTORIZADOS SERÁ RESPONSABLE POR DAÑOS Y
PERJUICIOS EN EXCESO DE LA CANTIDAD EN PESOS,
MONEDA NACIONAL EQUIVALENTE A US$500 DÓLARES
AMERICANOS (ADEMÁS DE REEMBOLSAR EL MONTO
PRINCIPAL DEL ENVÍO DE DINERO Y LA COMISION
COBRADA POR EL ENVÍO DE DINERO). El beneficiario,
mediante la firma del presente formato, acepta haber
recibido de conformidad el Envío de Dinero objeto de esta
operación. El Servicio de Transferencia de Dinero hacia
Mexico se ofrece a través de Western Union Financial
Services, Inc., y una red de Agentes/Pagadores
Autorizados. El Servicio de Recepción de Transferencias
de Dinero de Western Union en México, es ofrecido por
Grupo Dinámico Empresarial, S.A. de C.V., Transmisor de
Dinero. Registro número 20362, 4 noviembre 2011. AVISO
DE PRIVACIDAD En cumplimiento a la Ley Federal de
Protección de Datos Personales en Posesión de los
Particulares y su Reglamento (la “Ley”), Grupo Dinámico
Empresarial S.A. de C.V. (en adelante, el “Responsable”),
con domicilio en Av. Paseo de la Reforma No. 505, piso
17, Col. Cuauhtémoc, C.P. 06500, Ciudad de México,
informa que recaba sus datos personales por conducto de
su Encargado, SERVICIOS CASETEROS SAPI DE CV, para
la prestación del servicio de transferencias de dinero, y
para los siguientes fines que no son necesarios para la
existencia, mantenimiento y cumplimiento de la relación
jurídica entre el Responsable y Usted: fines
promocionales, programas de premios, conocer sus
preferencias de mercadotecnia (“Marketing”) y evaluación
de la calidad del servicio del Responsable. Si no está de
acuerdo en que sus Datos Personales se utilicen para
finalidades distintas a aquéllas que son necesarias para la
relación jurídica entre el Responsable y Usted, le
agradeceremos lo haga saber por escrito al Departamento
de Datos Personales del Responsable con domicilio en
Paseo de la Reforma No. 505, piso 17, Col. Cuauhtémoc,
C.P. 06500, Ciudad de México o al correo electrónico
privacymx@westernunion.com Usted puede conocer el
Aviso de Privacidad Integral del Responsable, al ingresar
a la página de internet www.westernunionmexico.com,
solicitarlo vía correo electrónico a
privacymx@westernunion.com o por escrito directamente
al Responsable en el domicilio anteriormente señalado.
DUDAS CON EL SERVICIO 01 800 719 8911
        </string>
    <string name="payment_tipo_ticket_western_declara">
Declaro bajo protesta de decir verdad que actúo en mi nombre
y por cuenta propia y que el origen de los recursos que estoy
recibiendo como Beneficiario, proceden de una fuente lícita
        </string>
    <string name="payment_tipo_ticket_seguro_aviso">
        En las próximas 48 horas recibirá por correo electrónico su certificado, es importante que cuando lo reciba valide que toda la información sea correcta.
        Para cualquier duda o aclaración marcar desde la Ciudad de México 30936741 o desde el interior de la Republica 01 800 044 9999
        ¡Felicidades! Tienes un mes gratis para realizar llamadas, solo debes marcar al 01 55 53508358 e ingresar tu PIN

    </string>
    <string name="direccion_western">
        Av. Jose Eleuterio #250 int 201, Col Santa Maria, Monterrey, Nuevo Leon
        CP 64650, Tel 50475555
    </string>
    <string name="direccion_western_html">
        Av. Jose Eleuterio #250 int 201, Col Santa Maria, Monterrey, Nuevo Leon CP 64650, Tel 50475555
    </string>
    <string name="pos_cliente_texto">Por favor identifique al cliente Barared (puede escribir el número de la tarjeta):</string>
    <string name="pos_granel_title">Productos a Granel</string>
    <string name="pos_granel_add">Agregar ?</string>
    <string name="pos_granel_change">Cambiar ?</string>
    <string name="inventario_btn_producto">Producto</string>
    <string name="inventario_btn_marca">Marca</string>
    <string name="inventario_btn_contenido">Contenido</string>
    <string name="inventario_btn_codigo">Código</string>
    <string name="inventario_btn_precio_compra">P.Compra</string>
    <string name="inventario_btn_precio_venta">P.Venta</string>
    <string name="inventario_btn_existencias">Existencias</string>
    <string name="inventario_sin_articulos">Sin articulos para mostrar</string>
    <string name="ap_dialogaddexpress_edit_title">Establecer precio de venta</string>
    <string name="ap_dialogaddexpress_edit_subtitle">El artículo solicitado no tiene un precio establecido por ?\nPor favor ingréselo a continuación:</string>
    <string name="ap_dialogaddexpress_hintcodigo">Codigo de barras</string>
    <string name="ap_dialogaddexpress_hintnombre">Nombre del artículo</string>
    <string name="ap_dialogaddexpress_hintprecio">Precio por ? del artículo</string>
    <string name="form_registro_caja_titulo">Registro de Caja</string>
    <string name="form_registro_caja_subtitulo">Elija un nombre para esta caja</string>
    <string name="form_registro_caja_nombre">Nombre de Caja</string>
    <string name="hind_edit_numero_telefonico">Número telefónico</string>
    <string name="str_correo_electronico">Correo electrónico</string>
    <string name="lbl_envio_ticket">Envío de Ticket</string>
    <string name="str_no_enviar">No enviar</string>
    <string name="str_enviar">Enviar</string>
    <string name="enviar_sms">Enviar SMS</string>
</resources>