<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:brio="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pos_bkg_gradient"
    android:orientation="vertical"
    android:padding="20dp"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/ap_dialogaddexpress_edit_title"
            style="@style/AppTheme.Brio_title" />


    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvdialogaddexpnombre_pre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/ap_dialogaddexpress_hintnombre"
                android:textColor="@color/black"
                android:textSize="@dimen/articulo_alta_botones_form" />

            <TextView
                android:id="@+id/tvdialogaddexpcodigo_pre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/ap_dialogaddexpress_hintcodigo"
                android:textColor="@color/black"
                android:textSize="@dimen/articulo_alta_botones_form"
                />

            <TextView
                android:id="@+id/tvdialogaddexpsubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/ap_dialogaddexpress_edit_subtitle"
                android:textColor="@color/black"
                android:textSize="@dimen/articulo_alta_botones_form" />

            <net.hova_it.barared.brio.apis.views.BrioEditText
                android:id="@+id/tvdialogaddexpprecio_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/ap_dialogaddexpress_hintprecio"
                android:textColor="@color/black"
                android:textSize="@dimen/articulo_alta_botones_form"
                brio:id_layout_ocultable_por_teclado="@+id/pos_panel_left"
                brio:tipo_teclado="numerico" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <net.hova_it.barared.brio.apis.views.BrioButton2
                    android:id="@+id/tv_btndialogcancel"
                    style="@style/BrioButton.Gris"
                    android:layout_gravity="start"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/brio_cancelar"/>

                <net.hova_it.barared.brio.apis.views.BrioButton2
                    android:id="@+id/tv_btnimagen"
                    style="@style/BrioButton.Rosa"
                    android:layout_gravity="start"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:text="@string/brio_continuar"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
